--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,5 @@
     Aquí va el contenido Modified Rama Nro
   </body>
   <button>PcNro1</button>
-  <button>Another</button>
+  <button>Another2</button>
 </html>
